--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                 responsive web applications.
                 <br />
                 <br />
-                <span id="work-experience-summary" class="title-span"
+                <span id="skills-and-passion" class="title-span"
                   >Skills and Passion
                 </span>
                 I have a strong passion for front-end development and design.
@@ -299,7 +299,7 @@
                   experiences.</span
                 >
                 <br />
-                <span id="work-eligibility-and-future-goals" class="title-span"
+                <span id="work-experience-summary" class="title-span"
                   >Work Experience Summary</span
                 >
                 I’ve built a diverse background in customer support, sales, and
