--- a/Pages/files-english.html
+++ b/Pages/files-english.html
@@ -139,10 +139,10 @@
 
     <!-- Preload and link to the main stylesheet -->
     <link rel="preload" href="../Styles/style.css" as="style" />
-    <link rel="preload" href="../Styles/sharingToggle.css" as="style" />
+    <!-- <link rel="preload" href="../Styles/sharingToggle.css" as="style" /> -->
 
     <link rel="stylesheet" href="../Styles/style.css" />
-    <link rel="stylesheet" href="../Styles/sharingToggle.css" />
+    <!-- <link rel="stylesheet" href="../Styles/sharingToggle.css" /> -->
 
     <!-- Google Tag Manager for tracking -->
     <script
@@ -288,7 +288,7 @@
     <script src="../Scripts/script.js" async></script>
     <script src="../Scripts/Cursor.js" async></script>
     <script src="../Scripts/dropdown-menu.js" async></script>
-    <script src="../Scripts/sharing-toggle.js" async></script>
+    <!-- <script src="../Scripts/sharing-toggle.js" async></script> -->
 
     <!-- Async or defer for external scripts -->
     <script
