--- a/Pages/files-german.html
+++ b/Pages/files-german.html
@@ -135,11 +135,11 @@
 
     <!-- Preload custom stylesheet -->
     <link rel="preload" href="../Styles/style.css" as="style" />
-    <link rel="preload" href="../Styles/sharingToggle.css" as="style" />
+    <!-- <link rel="preload" href="../Styles/sharingToggle.css" as="style" /> -->
 
     <!-- Link to custom stylesheet -->
     <link rel="stylesheet" href="../Styles/style.css" />
-    <link rel="stylesheet" href="../Styles/sharingToggle.css" />
+    <!-- <link rel="stylesheet" href="../Styles/sharingToggle.css" /> -->
 
     <!-- Google Analytics tracking code -->
     <script
@@ -296,7 +296,7 @@
     <script src="../Scripts/script.js" async></script>
     <script src="../Scripts/Cursor.js" async></script>
     <script src="../Scripts/dropdown-menu.js" async></script>
-    <script src="../Scripts/sharing-toggle.js" async></script>
+    <!-- <script src="../Scripts/sharing-toggle.js" async></script> -->
 
     <!-- Async or defer for external scripts -->
     <script
