--- a/Pages/resume-english.html
+++ b/Pages/resume-english.html
@@ -135,8 +135,8 @@
     <link rel="stylesheet" href="../Styles/style.css" />
     <link rel="preload" href="../Styles/style_resume.css" as="style" />
     <link rel="stylesheet" href="../Styles/style_resume.css" />
-    <link rel="preload" href="../Styles/sharingToggle.css" as="style" />
-    <link rel="stylesheet" href="../Styles/sharingToggle.css" />
+    <!-- <link rel="preload" href="../Styles/sharingToggle.css" as="style" /> -->
+    <!-- <link rel="stylesheet" href="../Styles/sharingToggle.css" /> -->
 
     <!-- Google Analytics tracking script -->
     <script
@@ -864,7 +864,7 @@
     <script src="../Scripts/transfer-resume.js" async></script>
     <script src="../Scripts/Cursor.js" async></script>
     <script src="../Scripts/dropdown-menu.js" async></script>
-    <script src="../Scripts/sharing-toggle.js" async></script>
+    <!-- <script src="../Scripts/sharing-toggle.js" async></script> -->
 
     <!-- Async or defer for external scripts -->
     <script>
