--- a/Pages/resume-mobile-english.html
+++ b/Pages/resume-mobile-english.html
@@ -129,8 +129,8 @@
     <link rel="stylesheet" href="../Styles/style.css" />
     <link rel="preload" href="../Styles/mobileResume.css" as="style" />
     <link rel="stylesheet" href="../Styles/mobileResume.css" />
-    <link rel="preload" href="../Styles/sharingToggle.css" as="style" />
-    <link rel="stylesheet" href="../Styles/sharingToggle.css" />
+    <!-- <link rel="preload" href="../Styles/sharingToggle.css" as="style" /> -->
+    <!-- <link rel="stylesheet" href="../Styles/sharingToggle.css" /> -->
 
     <!-- Google Analytics script for tracking -->
     <script
@@ -763,7 +763,7 @@
     <script src="../Scripts/script.js" async></script>
     <script src="../Scripts/Cursor.js" async></script>
     <script src="../Scripts/dropdown-menu.js" async></script>
-    <script src="../Scripts/sharing-toggle.js" async></script>
+    <!-- <script src="../Scripts/sharing-toggle.js" async></script> -->
 
     <!-- Async or defer for external scripts -->
 
