--- a/Pages/sitemap.html
+++ b/Pages/sitemap.html
@@ -130,7 +130,7 @@
     />
     <link rel="stylesheet" href="../Styles/sitemap.css" />
     <link rel="stylesheet" href="../Styles/style.css" />
-    <link rel="stylesheet" href="../Styles/sharingToggle.css" />
+    <!-- <link rel="stylesheet" href="../Styles/sharingToggle.css" /> -->
     <!-- Google Analytics tag -->
     <script
       async
@@ -366,7 +366,7 @@
     </main>
     <script src="../Scripts/script.js" async></script>
     <script src="../Scripts/Cursor.js" async></script>
-    <script src="../Scripts/sharing-toggle.js" async></script>
+    <!-- <script src="../Scripts/sharing-toggle.js" async></script> -->
     <!-- Async or defer for external scripts -->
 
     <script>
