--- a/Pages/portfolio-english.html
+++ b/Pages/portfolio-english.html
@@ -135,8 +135,8 @@
     <!-- Preload custom stylesheet -->
     <link rel="preload" href="../Styles/style.css" as="style" />
     <link rel="stylesheet" href="../Styles/style.css" />
-    <link rel="preload" href="../Styles/sharingToggle.css" as="style" />
-    <link rel="stylesheet" href="../Styles/sharingToggle.css" />
+    <!-- <link rel="preload" href="../Styles/sharingToggle.css" as="style" />
+    <link rel="stylesheet" href="../Styles/sharingToggle.css" /> -->
 
     <!-- Google Analytics tracking script -->
     <script
@@ -1560,11 +1560,11 @@
     <div id="footer"></div>
     <script src="../ScriptsComponents/footerLoader.js" async></script>
     <!--* Footer -->
-    <script src="../Scripts/toggle-english.js" async></script>
+    <!-- <script src="../Scripts/toggle-english.js" async></script> -->
     <script src="../Scripts/script.js" async></script>
     <script src="../Scripts/Cursor.js" async></script>
     <script src="../Scripts/dropdown-menu.js" async></script>
-    <script src="../Scripts/sharing-toggle.js" async></script>
+    <!-- <script src="../Scripts/sharing-toggle.js" async></script> -->
 
     <!-- Async or defer for external scripts -->
     <script
