--- a/Pages/portfolio-german.html
+++ b/Pages/portfolio-german.html
@@ -138,11 +138,11 @@
 
     <!-- Preload custom stylesheet -->
     <link rel="preload" href="../Styles/style.css" as="style" />
-    <link rel="preload" href="../Styles/sharingToggle.css" as="style" />
+    <!-- <link rel="preload" href="../Styles/sharingToggle.css" as="style" /> -->
 
     <!-- Custom stylesheet for the portfolio -->
     <link rel="stylesheet" href="../Styles/style.css" />
-    <link rel="stylesheet" href="../Styles/sharingToggle.css" />
+    <!-- <link rel="stylesheet" href="../Styles/sharingToggle.css" /> -->
 
     <!-- Google Analytics tag -->
     <script
@@ -1587,11 +1587,11 @@
     <script src="../ScriptsComponents/footerLoader.js" async></script>
     <!--* Footer -->
 
-    <script src="../Scripts/toggle-german.js" async></script>
+    <!-- <script src="../Scripts/toggle-german.js" async></script> -->
     <script src="../Scripts/script.js" async></script>
     <script src="../Scripts/Cursor.js" async></script>
     <script src="../Scripts/dropdown-menu.js" async></script>
-    <script src="../Scripts/sharing-toggle.js" async></script>
+    <!-- <script src="../Scripts/sharing-toggle.js" async></script> -->
 
     <!-- Async or defer for external scripts -->
     <script
