--- a/index.html
+++ b/index.html
@@ -701,6 +701,9 @@
       <!-- ~ custom curser -->
       <!-- <div class="sharethis-sticky-share-buttons"></div> -->
     </main>
+    <!-- ! dark mode not working -->
+    <!-- <button id="toggleDarkMode">Toggle Dark Mode</button>
+    <script src="./Scripts/darkMode.js" async></script> -->
     <!--* Footer -->
     <div id="footer"></div>
     <script src="./ScriptsComponents/footerLoader.js" async></script>
