--- a/Pages/contact-english.html
+++ b/Pages/contact-english.html
@@ -251,6 +251,9 @@
                 aria-hidden="true"
               ></i>
             </h2>
+            <div class="warning-paragraph">
+              <p>*Please do not call without prior appointment*</p>
+            </div>
           </div>
           <div class="social-media-3d-menu">
             <ul>
@@ -704,6 +707,17 @@
                   />
                 </a>
               </div>
+            </div>
+            <div class="warning-paragraph">
+              <p>
+                I provide my phone number to facilitate convenient communication
+                and scheduling appointments, including through messenger apps
+                such as Signal, Viber, or SMS. This allows for timely responses
+                to job offers and opportunities. However, please note that spam
+                and unknown calls will be blocked and ignored. I kindly ask that
+                you refrain from calling me before arranging an appointment via
+                one of the contact options listed above.
+              </p>
             </div>
           </div>
         </div>
