--- a/Pages/contact-german.html
+++ b/Pages/contact-german.html
@@ -244,6 +244,9 @@
                 aria-hidden="true"
               ></i>
             </h2>
+            <div class="warning-paragraph">
+              <p>*Bitte rufen Sie nicht ohne vorherige Vereinbarung an*</p>
+            </div>
           </div>
           <div class="social-media-3d-menu">
             <ul>
@@ -697,6 +700,18 @@
                   />
                 </a>
               </div>
+            </div>
+            <div class="warning-paragraph">
+              <p>
+                Ich gebe meine Telefonnummer an, um eine bequeme Kommunikation
+                und Terminvereinbarungen zu erleichtern, auch über
+                Messenger-Apps wie Signal, Viber oder SMS. Dies ermöglicht
+                zeitnahe Antworten auf Stellenangebote und Möglichkeiten. Bitte
+                beachten Sie jedoch, dass Spam- und unbekannte Anrufe blockiert
+                und ignoriert werden. Ich bitte Sie, davon abzusehen, mich
+                anzurufen, bevor Sie einen Termin über eine der oben
+                aufgeführten Kontaktmöglichkeiten vereinbaren.
+              </p>
             </div>
           </div>
         </div>
