dropdown menu correction

--- a/PagesComponents/header-de.html
+++ b/PagesComponents/header-de.html
@@ -9,12 +9,17 @@
     </div>
     <h1 data-text="Kathrin Peled">
       Kathrin Peled <br />
-      Web Developer
+      Web Entwicklerin
     </h1>
     <nav>
       <ul>
         <li class="dropdown">
-          <a href="./index-german.html" aria-label="Homepage">Über</a>
+          <a
+            href="./index-german.html"
+            aria-label="Homepage"
+            aria-haspopup="true"
+            >Über</a
+          >
           <ul class="dropdown-portfolio">
             <li>
               <a href="./index-german.html#about" aria-label="About"
@@ -35,10 +40,21 @@
                 >Meine Dateien</a
               >
             </li>
+            <li>
+              <a
+                href="./Pages/timeline-german.html"
+                aria-label="See my timeline as a worker and a student"
+              >
+                Mein Zeitstrahl</a
+              >
+            </li>
           </ul>
         </li>
         <li class="dropdown">
-          <a href="index-german.html#portfolio" aria-label="Portfolio"
+          <a
+            href="index-german.html#portfolio"
+            aria-label="Portfolio"
+            aria-haspopup="true"
             >Portfolio</a
           >
           <ul class="dropdown-portfolio">
