--- a/PagesComponents/header-en.html
+++ b/PagesComponents/header-en.html
@@ -14,10 +14,12 @@
     <nav>
       <ul>
         <li class="dropdown">
-          <a href="../index.html" aria-label="Homepage">About</a>
+          <a href="../index.html" aria-label="Homepage" aria-haspopup="true"
+            >About</a
+          >
           <ul class="dropdown-portfolio">
             <li>
-              <a href="../index.html#about" aria-label="Aboutk">About Me</a>
+              <a href="../index.html#about" aria-label="About">About Me</a>
             </li>
             <li>
               <a
@@ -34,10 +36,21 @@
                 My Files</a
               >
             </li>
+            <li>
+              <a
+                href="./Pages/timeline-english.html"
+                aria-label="See my timeline as a worker and a student"
+              >
+                My Timeline</a
+              >
+            </li>
           </ul>
         </li>
         <li class="dropdown">
-          <a href="index.html#portfolio" aria-label="Portfolio section"
+          <a
+            href="index.html#portfolio"
+            aria-label="Portfolio section"
+            aria-haspopup="true"
             >Portfolio</a
           >
           <ul class="dropdown-portfolio">
