preparatins for timeline pages

--- a/PagesComponents/header-de.html
+++ b/PagesComponents/header-de.html
@@ -32,14 +32,14 @@
               <a
                 href="./Pages/resume-german.html"
                 aria-label="Ineractive Resume Book"
-                >Mein Lebenslauf</a
+                >Lebenslauf</a
               >
             </li>
             <li>
               <a
                 href="./Pages/files-german.html"
                 aria-label="Download my files and documents"
-                >Meine Dateien</a
+                >Dateien</a
               >
             </li>
             <li>
@@ -47,7 +47,7 @@
                 href="./Pages/timeline-german.html"
                 aria-label="See my timeline as a worker and a student"
               >
-                Mein Zeitstrahl</a
+                Zeitstrahl</a
               >
             </li>
           </ul>
