--- a/PagesComponents/header-en.html
+++ b/PagesComponents/header-en.html
@@ -27,7 +27,7 @@
               <a
                 href="./Pages/resume-english.html"
                 aria-label="Ineractive Resume Book"
-                >My Resume</a
+                >Resume</a
               >
             </li>
             <li>
@@ -35,7 +35,7 @@
                 href="./Pages/files-english.html"
                 aria-label="Download my files and documents"
               >
-                My Files</a
+                Files</a
               >
             </li>
             <li>
@@ -43,7 +43,7 @@
                 href="./Pages/timeline-english.html"
                 aria-label="See my timeline as a worker and a student"
               >
-                My Timeline</a
+                Timeline</a
               >
             </li>
           </ul>
