added titles to resume pages

--- a/Pages/resume-english.html
+++ b/Pages/resume-english.html
@@ -182,6 +182,8 @@
       role="main"
       aria-label="Main Resume english Section"
     >
+    <div class="container">
+    <div class="h2-title"><h2 id="resume-book">My Resume</h2></div>
       <div class="wrapper">
         <div class="cover cover-left" aria-hidden="true"></div>
         <div class="cover cover-right" aria-hidden="true"></div>
@@ -839,6 +841,7 @@
           </div>
         </div>
       </div>
+    </div>
       <!-- ^languages switcher -->
       <div class="languages" id="language-switcher"></div>
       <script src="../ScriptsComponents/languageSwitcher.js"></script>
