added titles to resume pages

--- a/Pages/resume-mobile-german.html
+++ b/Pages/resume-mobile-german.html
@@ -185,7 +185,9 @@
       aria-label="Main Resume mobile german Section"
     >
       <div class="container">
-        <div class="h2-title"><h2 id="resume-document">My Resume</h2></div>
+        <div class="h2-title">
+          <h2 id="resume-document">Mein Lebenslauf</h2>
+        </div>
 
         <div class="book">
           <!-- page 0 -->
