corrections of mobile resume pages and scripts

--- a/Pages/timeline-english.html
+++ b/Pages/timeline-english.html
@@ -181,6 +181,64 @@
           <div class="h2-title">
             <h2 id="my-timeline-resume">My Timeline</h2>
           </div>
+          <div class="timeline">
+            <div class="container container-timeline">
+              <ul>
+                <li>
+                  <i class="fa-solid fa-briefcase" aria-hidden="true"></i>
+                  <h3 class="h3-title">web developer</h3>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Expedita cupiditate impedit nulla sit at praesentium,
+                    eveniet culpa aliquid officiis laudantium! Deleniti,
+                    possimus! Culpa magnam sunt laboriosam temporibus quasi,
+                    voluptatem tempora.
+                  </p>
+                  <span class="circle"></span>
+                  <span class="date">January, 2022</span>
+                </li>
+                <li>
+                  <i class="fa-solid fa-graduation-cap" aria-hidden="true"></i>
+                  <h3 class="h3-title">web developer</h3>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Expedita cupiditate impedit nulla sit at praesentium,
+                    eveniet culpa aliquid officiis laudantium! Deleniti,
+                    possimus! Culpa magnam sunt laboriosam temporibus quasi,
+                    voluptatem tempora.
+                  </p>
+                  <span class="circle"></span>
+                  <span class="date">January, 2020</span>
+                </li>
+                <li>
+                  <i class="fa-solid fa-briefcase" aria-hidden="true"></i>
+                  <h3 class="h3-title">web developer</h3>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Expedita cupiditate impedit nulla sit at praesentium,
+                    eveniet culpa aliquid officiis laudantium! Deleniti,
+                    possimus! Culpa magnam sunt laboriosam temporibus quasi,
+                    voluptatem tempora.
+                  </p>
+                  <span class="circle"></span>
+                  <span class="date">January, 2022</span>
+                </li>
+                <li>
+                  <i class="fa-solid fa-graduation-cap" aria-hidden="true"></i>
+                  <h3 class="h3-title">web developer</h3>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Expedita cupiditate impedit nulla sit at praesentium,
+                    eveniet culpa aliquid officiis laudantium! Deleniti,
+                    possimus! Culpa magnam sunt laboriosam temporibus quasi,
+                    voluptatem tempora.
+                  </p>
+                  <span class="circle"></span>
+                  <span class="date">September, 2020</span>
+                </li>
+              </ul>
+            </div>
+          </div>
         </div>
       </section>
       <!-- ^languages switcher -->
@@ -206,6 +264,7 @@
     <script src="../Scripts/script.js" async></script>
     <script src="../Scripts/Cursor.js" async></script>
     <script src="../Scripts/dropdown-menu.js" async></script>
+    <script src="../Scripts/transfer-resume.js" async></script>
     <!-- <script src="../Scripts/sharing-toggle.js" async></script> -->
 
     <!-- Async or defer for external scripts -->
