--- a/Pages/timeline-english.html
+++ b/Pages/timeline-english.html
@@ -179,7 +179,7 @@
       <section id="timelineSection">
         <div class="container">
           <div class="h2-title">
-            <h2 id="my-timeline-resume">My Timeline</h2>
+            <h2 id="my-timeline-resume">My Timeline - *in process*</h2>
           </div>
           <div class="timeline">
             <div class="container container-timeline">
