--- a/Pages/timeline-english.html
+++ b/Pages/timeline-english.html
@@ -185,8 +185,11 @@
             <div class="container container-timeline">
               <ul>
                 <li>
-                  <i class="fa-solid fa-briefcase" aria-hidden="true"></i>
-                  <h3 class="h3-title">web developer</h3>
+                  <div class="titles-wrapper">
+                    <i class="fa-solid fa-briefcase" aria-hidden="true"></i>
+                    <h3 class="h3-title">web developer</h3>
+                  </div>
+                  <h4>Workplace name</h4>
                   <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Expedita cupiditate impedit nulla sit at praesentium,
@@ -195,11 +198,17 @@
                     voluptatem tempora.
                   </p>
                   <span class="circle"></span>
-                  <span class="date">January, 2022</span>
+                  <span class="date">september, 2022</span>
                 </li>
                 <li>
-                  <i class="fa-solid fa-graduation-cap" aria-hidden="true"></i>
-                  <h3 class="h3-title">web developer</h3>
+                  <div class="titles-wrapper">
+                    <i
+                      class="fa-solid fa-graduation-cap"
+                      aria-hidden="true"
+                    ></i>
+                    <h3 class="h3-title">Student web developer</h3>
+                  </div>
+                  <h4>Workplace name</h4>
                   <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Expedita cupiditate impedit nulla sit at praesentium,
@@ -208,11 +217,14 @@
                     voluptatem tempora.
                   </p>
                   <span class="circle"></span>
-                  <span class="date">January, 2020</span>
+                  <span class="date">september, 2022</span>
                 </li>
                 <li>
-                  <i class="fa-solid fa-briefcase" aria-hidden="true"></i>
-                  <h3 class="h3-title">web developer</h3>
+                  <div class="titles-wrapper">
+                    <i class="fa-solid fa-shield-halved" aria-hidden="true"></i>
+                    <h3 class="h3-title">Army Service</h3>
+                  </div>
+                  <h4>Workplace name</h4>
                   <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Expedita cupiditate impedit nulla sit at praesentium,
@@ -221,11 +233,14 @@
                     voluptatem tempora.
                   </p>
                   <span class="circle"></span>
-                  <span class="date">January, 2022</span>
+                  <span class="date">september, 2022</span>
                 </li>
                 <li>
-                  <i class="fa-solid fa-graduation-cap" aria-hidden="true"></i>
-                  <h3 class="h3-title">web developer</h3>
+                  <div class="titles-wrapper">
+                    <i class="fa-solid fa-paw" aria-hidden="true"></i>
+                    <h3 class="h3-title">Volunteer</h3>
+                  </div>
+                  <h4>Workplace name</h4>
                   <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Expedita cupiditate impedit nulla sit at praesentium,
@@ -234,7 +249,7 @@
                     voluptatem tempora.
                   </p>
                   <span class="circle"></span>
-                  <span class="date">September, 2020</span>
+                  <span class="date">september, 2022</span>
                 </li>
               </ul>
             </div>
