mobile resume corrections

--- a/Pages/resumeMobile-english.html
+++ b/Pages/resumeMobile-english.html
@@ -176,8 +176,13 @@
       role="main"
       aria-label="Main Resume mobile english Section"
     >
+    <section class="resume-documents-section">
       <div class="container">
-        <div class="h2-title"><h2 id="resume-document">My Resume - *in process*</h2></div>
+        <div class="container">
+          <div class="h2-title">
+            <h2 id="resume-document">My Resume - *in process*</h2>
+          </div>
+        </div>
         <div class="book">
           <!-- page 0 -->
           <div class="book-page">
@@ -795,6 +800,7 @@
           <!-- closer book -->
         </div>
       </div>
+    </section>
       <!-- ^languages switcher -->
       <div class="languages" id="language-switcher"></div>
       <script src="../ScriptsComponents/languageSwitcher.js"></script>
