--- a/Pages/timeline-english.html
+++ b/Pages/timeline-english.html
@@ -181,10 +181,17 @@
           <div class="h2-title">
             <h2 id="my-timeline-resume">My Timeline - *in process*</h2>
           </div>
+          <div class="sub-menu">
+            <ul>
+              <a href="#my-education"><li>My Education</li></a>
+              <a href="#current-status"><li>Current Status</li></a>
+              <a href="#skills-and-passion"><li>Skills and Passion</li></a>
+            </ul>
+          </div>
           <div class="timeline">
             <div class="container container-timeline">
               <ul>
-                <li>
+                <li class="work-experience-li-item">
                   <div class="titles-wrapper">
                     <i class="fa-solid fa-briefcase" aria-hidden="true"></i>
                     <h3 class="h3-title">web developer</h3>
@@ -200,7 +207,7 @@
                   <span class="circle"></span>
                   <span class="date">september, 2022</span>
                 </li>
-                <li>
+                <li class="education-li-item">
                   <div class="titles-wrapper">
                     <i
                       class="fa-solid fa-graduation-cap"
@@ -219,7 +226,7 @@
                   <span class="circle"></span>
                   <span class="date">september, 2022</span>
                 </li>
-                <li>
+                <li class="other-experience-li-item">
                   <div class="titles-wrapper">
                     <i class="fa-solid fa-shield-halved" aria-hidden="true"></i>
                     <h3 class="h3-title">Army Service</h3>
@@ -235,7 +242,7 @@
                   <span class="circle"></span>
                   <span class="date">september, 2022</span>
                 </li>
-                <li>
+                <li class="other-experience-li-item">
                   <div class="titles-wrapper">
                     <i class="fa-solid fa-paw" aria-hidden="true"></i>
                     <h3 class="h3-title">Volunteer</h3>
