mobile dropdown menu JS file corrections

--- a/Pages/resumeMobile-english.html
+++ b/Pages/resumeMobile-english.html
@@ -180,7 +180,7 @@
       <div class="container">
         <div class="container">
           <div class="h2-title">
-            <h2 id="resume-document">My Resume - *in process*</h2>
+            <h2 id="resume-document">My Resume</h2>
           </div>
         </div>
         <div class="book">
