--- a/Pages/resumeMobile-german.html
+++ b/Pages/resumeMobile-german.html
@@ -188,7 +188,7 @@
         <div class="container">
           <div class="container">
             <div class="h2-title">
-              <h2 id="resume-document">Mein Lebenslauf - *in process*</h2>
+              <h2 id="resume-document">Mein Lebenslauf</h2>
             </div>
           </div>
           <div class="book">
