timeline-english filter js file

--- a/Pages/portfolio-english.html
+++ b/Pages/portfolio-english.html
@@ -1563,7 +1563,7 @@
     <!-- <script src="../Scripts/toggle-english.js" async></script> -->
     <script src="../Scripts/script.js" async></script>
     <script src="../Scripts/Cursor.js" async></script>
-    <script src="../Scripts/dropdown-menu.js" async></script>
+    <script src="../Scripts/dropdown-menu.js"></script>
     <!-- <script src="../Scripts/sharing-toggle.js" async></script> -->
 
     <!-- Async or defer for external scripts -->
