--- a/Pages/resumeMobile-german.html
+++ b/Pages/resumeMobile-german.html
@@ -860,7 +860,7 @@
     <!--* Footer -->
     <script src="../Scripts/script.js" async></script>
     <script src="../Scripts/Cursor.js" async></script>
-    <script src="../Scripts/dropdown-menu.js" async></script>
+    <script src="../Scripts/dropdown-menu.js"></script>
     <!-- <script src="../Scripts/sharing-toggle.js" async></script> -->
 
     <!-- Async or defer for external scripts -->
