--- a/Pages/timeline-english.html
+++ b/Pages/timeline-english.html
@@ -176,102 +176,102 @@
       role="main"
       aria-label="Main Resume mobile english Section"
     >
-    <section id="timelineSection">
-      <div class="container">
-        <div class="h2-title">
-          <h2 id="my-timeline-resume">My Timeline - *in process*</h2>
-        </div>
-        <div class="container-menu">
-          <div class="sub-menu">
-            <ul>
-              <li class="menu-item" data-filter="work-experience-li-item">
-                Work Experience
-              </li>
-              <li class="menu-item" data-filter="education-li-item">
-                Education and Courses
-              </li>
-              <li class="menu-item" data-filter="other-experience-li-item">
-                Other Activities
-              </li>
-              <li class="menu-item" data-filter="showAll">See All</li>
-            </ul>
+      <section id="timelineSection">
+        <div class="container">
+          <div class="h2-title">
+            <h2 id="my-timeline-resume">My Timeline - *in process*</h2>
+          </div>
+          <div class="container-menu">
+            <div class="sub-menu">
+              <ul>
+                <li class="menu-item" data-filter="work-experience-li-item">
+                  Work Experience
+                </li>
+                <li class="menu-item" data-filter="education-li-item">
+                  Education and Courses
+                </li>
+                <li class="menu-item" data-filter="other-experience-li-item">
+                  Other Activities
+                </li>
+                <li class="menu-item" data-filter="showAll">See All</li>
+              </ul>
+            </div>
+          </div>
+          <div class="timeline">
+            <div class="container container-timeline">
+              <ul>
+                <li class="timeline-item work-experience-li-item">
+                  <div class="titles-wrapper">
+                    <i class="fa-solid fa-briefcase" aria-hidden="true"></i>
+                    <h3 class="h3-title">web developer</h3>
+                  </div>
+                  <h4>Workplace name</h4>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Expedita cupiditate impedit nulla sit at praesentium,
+                    eveniet culpa aliquid officiis laudantium! Deleniti,
+                    possimus! Culpa magnam sunt laboriosam temporibus quasi,
+                    voluptatem tempora.
+                  </p>
+                  <span class="circle"></span>
+                  <span class="date">september, 2022</span>
+                </li>
+                <li class="timeline-item education-li-item">
+                  <div class="titles-wrapper">
+                    <i
+                      class="fa-solid fa-graduation-cap"
+                      aria-hidden="true"
+                    ></i>
+                    <h3 class="h3-title">Student web developer</h3>
+                  </div>
+                  <h4>Workplace name</h4>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Expedita cupiditate impedit nulla sit at praesentium,
+                    eveniet culpa aliquid officiis laudantium! Deleniti,
+                    possimus! Culpa magnam sunt laboriosam temporibus quasi,
+                    voluptatem tempora.
+                  </p>
+                  <span class="circle"></span>
+                  <span class="date">september, 2022</span>
+                </li>
+                <li class="timeline-item other-experience-li-item">
+                  <div class="titles-wrapper">
+                    <i class="fa-solid fa-shield-halved" aria-hidden="true"></i>
+                    <h3 class="h3-title">Army Service</h3>
+                  </div>
+                  <h4>Workplace name</h4>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Expedita cupiditate impedit nulla sit at praesentium,
+                    eveniet culpa aliquid officiis laudantium! Deleniti,
+                    possimus! Culpa magnam sunt laboriosam temporibus quasi,
+                    voluptatem tempora.
+                  </p>
+                  <span class="circle"></span>
+                  <span class="date">september, 2022</span>
+                </li>
+                <li class="timeline-item other-experience-li-item">
+                  <div class="titles-wrapper">
+                    <i class="fa-solid fa-paw" aria-hidden="true"></i>
+                    <h3 class="h3-title">Volunteer</h3>
+                  </div>
+                  <h4>Workplace name</h4>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Expedita cupiditate impedit nulla sit at praesentium,
+                    eveniet culpa aliquid officiis laudantium! Deleniti,
+                    possimus! Culpa magnam sunt laboriosam temporibus quasi,
+                    voluptatem tempora.
+                  </p>
+                  <span class="circle"></span>
+                  <span class="date">september, 2022</span>
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
-        <div class="timeline">
-          <div class="container container-timeline">
-            <ul>
-              <li class="work-experience-li-item">
-                <div class="titles-wrapper">
-                  <i class="fa-solid fa-briefcase" aria-hidden="true"></i>
-                  <h3 class="h3-title">web developer</h3>
-                </div>
-                <h4>Workplace name</h4>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Expedita cupiditate impedit nulla sit at praesentium,
-                  eveniet culpa aliquid officiis laudantium! Deleniti,
-                  possimus! Culpa magnam sunt laboriosam temporibus quasi,
-                  voluptatem tempora.
-                </p>
-                <span class="circle"></span>
-                <span class="date">september, 2022</span>
-              </li>
-              <li class="education-li-item">
-                <div class="titles-wrapper">
-                  <i
-                    class="fa-solid fa-graduation-cap"
-                    aria-hidden="true"
-                  ></i>
-                  <h3 class="h3-title">Student web developer</h3>
-                </div>
-                <h4>Workplace name</h4>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Expedita cupiditate impedit nulla sit at praesentium,
-                  eveniet culpa aliquid officiis laudantium! Deleniti,
-                  possimus! Culpa magnam sunt laboriosam temporibus quasi,
-                  voluptatem tempora.
-                </p>
-                <span class="circle"></span>
-                <span class="date">september, 2022</span>
-              </li>
-              <li class="other-experience-li-item">
-                <div class="titles-wrapper">
-                  <i class="fa-solid fa-shield-halved" aria-hidden="true"></i>
-                  <h3 class="h3-title">Army Service</h3>
-                </div>
-                <h4>Workplace name</h4>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Expedita cupiditate impedit nulla sit at praesentium,
-                  eveniet culpa aliquid officiis laudantium! Deleniti,
-                  possimus! Culpa magnam sunt laboriosam temporibus quasi,
-                  voluptatem tempora.
-                </p>
-                <span class="circle"></span>
-                <span class="date">september, 2022</span>
-              </li>
-              <li class="other-experience-li-item">
-                <div class="titles-wrapper">
-                  <i class="fa-solid fa-paw" aria-hidden="true"></i>
-                  <h3 class="h3-title">Volunteer</h3>
-                </div>
-                <h4>Workplace name</h4>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Expedita cupiditate impedit nulla sit at praesentium,
-                  eveniet culpa aliquid officiis laudantium! Deleniti,
-                  possimus! Culpa magnam sunt laboriosam temporibus quasi,
-                  voluptatem tempora.
-                </p>
-                <span class="circle"></span>
-                <span class="date">september, 2022</span>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </section>
+      </section>
       <!-- ^languages switcher -->
       <div class="languages" id="language-switcher"></div>
       <script src="../ScriptsComponents/languageSwitcher.js"></script>
@@ -294,9 +294,9 @@
     <!--* Footer -->
     <script src="../Scripts/script.js" async></script>
     <script src="../Scripts/Cursor.js" async></script>
-    <script src="../Scripts/dropdown-menu.js" async></script>
+    <script src="../Scripts/dropdown-menu.js"></script>
     <script src="../Scripts/transfer-resume.js" async></script>
-    <script src="../Scripts/timeline-filter.js" async></script>
+    <script src="../Scripts/timeline-filter.js"></script>
 
     <!-- <script src="../Scripts/sharing-toggle.js" async></script> -->
 
