--- a/Pages/files-english.html
+++ b/Pages/files-english.html
@@ -287,7 +287,7 @@
     <!--* Footer -->
     <script src="../Scripts/script.js" async></script>
     <script src="../Scripts/Cursor.js" async></script>
-    <script src="../Scripts/dropdown-menu.js" async></script>
+    <script src="../Scripts/dropdown-menu.js"></script>
     <!-- <script src="../Scripts/sharing-toggle.js" async></script> -->
 
     <!-- Async or defer for external scripts -->
