--- a/Pages/portfolio-german.html
+++ b/Pages/portfolio-german.html
@@ -1590,7 +1590,7 @@
     <!-- <script src="../Scripts/toggle-german.js" async></script> -->
     <script src="../Scripts/script.js" async></script>
     <script src="../Scripts/Cursor.js" async></script>
-    <script src="../Scripts/dropdown-menu.js" async></script>
+    <script src="../Scripts/dropdown-menu.js"></script>
     <!-- <script src="../Scripts/sharing-toggle.js" async></script> -->
 
     <!-- Async or defer for external scripts -->
