timeline-english filter js file

--- a/Pages/timeline-english.html
+++ b/Pages/timeline-english.html
@@ -200,6 +200,45 @@
           <div class="timeline">
             <div class="container container-timeline">
               <ul>
+                <li class="timeline-item education-li-item">
+                  <div class="titles-wrapper">
+                    <i
+                      class="fa-solid fa-graduation-cap"
+                      aria-hidden="true"
+                    ></i>
+                    <h3 class="h3-title">Student Web Developer</h3>
+                  </div>
+                  <h4>DCI, Berlin</h4>
+                  <p>
+                    &#10004;&#65039; Intensive Course : Completed a 12-month web
+                    development program covering front-end and back-end
+                    technologies.
+                    <br />&#10004;&#65039; Project Experience : Developed small
+                    projects to create functional web applications, showcasing
+                    collaboration, problem-solving and technical skills.
+                  </p>
+                  <span class="circle"></span>
+                  <span class="date">February, 2024</span>
+                </li>
+                <li class="timeline-item education-li-item">
+                  <div class="titles-wrapper">
+                    <i
+                      class="fa-solid fa-graduation-cap"
+                      aria-hidden="true"
+                    ></i>
+                    <h3 class="h3-title">Orientation Course For Hi-Tech</h3>
+                  </div>
+                  <h4>DCI, Berlin</h4>
+                  <p>
+                    &#10004;&#65039; Gained a foundational understanding of Web
+                    Development (HTML and CSS). <br />&#10004;&#65039;
+                    Introduced to Python and Java programming basics.
+                    <br />&#10004;&#65039; Learned essential concepts in Online
+                    Marketing (SEO, digital ads) and Salesforce CRM.
+                  </p>
+                  <span class="circle"></span>
+                  <span class="date">January, 2024</span>
+                </li>
                 <li class="timeline-item work-experience-li-item">
                   <div class="titles-wrapper">
                     <i class="fa-solid fa-briefcase" aria-hidden="true"></i>
