--- a/Pages/timeline-german.html
+++ b/Pages/timeline-german.html
@@ -179,7 +179,7 @@
       <section id="timelineSection">
         <div class="container">
           <div class="h2-title">
-            <h2 id="my-timeline-resume">Mein Zeitstrahl - *in Bearbeitung*</h2>
+            <h2 id="my-timeline-resume">Mein Zeitstrahl</h2>
           </div>
           <div class="container-menu">
             <div class="sub-menu">
@@ -600,7 +600,7 @@
     <script src="../Scripts/script.js" async></script>
     <script src="../Scripts/Cursor.js" async></script>
     <script src="../Scripts/dropdown-menu.js"></script>
-    <script src="../Scripts/transfer-resume.js" async></script>
+    <script src="../Scripts/transfer-resume.js" ></script>
     <script src="../Scripts/timeline-filter.js"></script>
 
     <!-- <script src="../Scripts/sharing-toggle.js" async></script> -->
