--- a/Pages/timeline-english.html
+++ b/Pages/timeline-english.html
@@ -179,7 +179,7 @@
       <section id="timelineSection">
         <div class="container">
           <div class="h2-title">
-            <h2 id="my-timeline-resume">My Timeline - *in process*</h2>
+            <h2 id="my-timeline-resume">My Timeline</h2>
           </div>
           <div class="container-menu">
             <div class="sub-menu">
@@ -609,7 +609,7 @@
     <script src="../Scripts/script.js" async></script>
     <script src="../Scripts/Cursor.js" async></script>
     <script src="../Scripts/dropdown-menu.js"></script>
-    <script src="../Scripts/transfer-resume.js" async></script>
+    <script src="../Scripts/transfer-resume.js"></script>
     <script src="../Scripts/timeline-filter.js"></script>
 
     <!-- <script src="../Scripts/sharing-toggle.js" async></script> -->
